--- a/.github/workflows/action-ros-lint.yml
+++ b/.github/workflows/action-ros-lint.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          linter: [xmllint, copyright, cpplint, cppcheck, uncrustify, pclint]
+          linter: [xmllint, copyright, cpplint, cppcheck, uncrustify]
     steps:
       - uses: actions/checkout@v2
       - uses: ros-tooling/setup-ros@0.1.4
