--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,8 +35,13 @@ install(
 
 # TEST
 if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  ament_lint_auto_find_test_dependencies()
+  # find_package(ament_lint_auto REQUIRED)
+  find_package(launch_testing_ament_cmake REQUIRED)
+  find_package(gazebo_ros REQUIRED)
+
+  # ament_lint_auto_find_test_dependencies()
+  add_launch_test(test/underwater_sphere_spawn.test.py)
+
 endif()
 
 ament_package()
