--- a/.github/workflows/action-ros-lint.yml
+++ b/.github/workflows/action-ros-lint.yml
@@ -10,11 +10,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          linter: [xmllint, copyright, cpplint, cppcheck, uncrustify]
+          linter: [xmllint, copyright, cpplint, cppcheck, uncrustify, flake8, pep257, pycodestyle]
     steps:
       - uses: actions/checkout@v2
-      - uses: ros-tooling/setup-ros@0.1.4
-      - uses: ros-tooling/action-ros-lint@0.1.3
+      - uses: ros-tooling/setup-ros@0.2.1
+      - uses: ros-tooling/action-ros-lint@0.1.4
         with:
           linter: ${{ matrix.linter }}
           package-name: uuv2_gazebo_model_plugins
